akka microkernel support and version bump